force-app/main/default/objects/PP_PartnerApplication__c/PP_PartnerApplication__c.object-meta.xml
<CustomObject>
    <description>SFP-11649 -  Represents an Application of a Partner.</description>
    <label>Partner Application</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>