force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_Account__c.field-meta.xml
<CustomField>
    <fullName>PP_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFP-11649 - The account that represents this partner record.</description>
    <inlineHelpText>The account that represents this partner record.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Applications</relationshipLabel>
    <relationshipName>PP_PartnerApplications</relationshipName>
    <type>Lookup</type>
</CustomField>