force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_AnnualBusinessTurnover__c.field-meta.xml
<CustomField>
    <fullName>PP_AnnualBusinessTurnover__c</fullName>
    <description>SFP-11649 - Represents the annual business turnover</description>
    <label>Annual Business Turnover</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PP_Currency__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R0-R5m</fullName>
            </value>
            <value>
                <fullName>R5m-R20m</fullName>
            </value>
            <value>
                <fullName>R20m-R100m</fullName>
            </value>
            <value>
                <fullName>&gt;R100m</fullName>
            </value>
            <value>
                <fullName>$0-$250,000</fullName>
            </value>
            <value>
                <fullName>$250,000-$1.5m</fullName>
            </value>
            <value>
                <fullName>$1.5m-$10m</fullName>
            </value>
            <value>
                <fullName>&gt;$10m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>