force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_ApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>PP_ApplicationStatus__c</fullName>
    <description>SFP-11649 - Represents the partners application status.</description>
    <inlineHelpText>Represents the partners onboarding application status.</inlineHelpText>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>