force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>PP_Capabilities__c</fullName>
    <description>SFP-11649 - Represents what business or technology capabilities a partner has.</description>
    <inlineHelpText>Represents what business or technology capabilities a partner has.</inlineHelpText>
    <label>Capabilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>APIs</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Big Data</fullName>
            </value>
            <value>
                <fullName>BlockChain</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Cloud as a Service (CaaS)</fullName>
            </value>
            <value>
                <fullName>Cloud Computing</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Data Analytics</fullName>
            </value>
            <value>
                <fullName>Data Modelling</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>Digital Marketing</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>Financial Modelling</fullName>
            </value>
            <value>
                <fullName>FOREX</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Information Security</fullName>
            </value>
            <value>
                <fullName>Infrastructure-as-a-Service (IaaS)</fullName>
            </value>
            <value>
                <fullName>Internet of Things</fullName>
            </value>
            <value>
                <fullName>KYC</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Management Consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>