force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_Currency__c.field-meta.xml
<CustomField>
    <fullName>PP_Currency__c</fullName>
    <description>SFP-11649 - Represents the annual business turnover currency</description>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZAR</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>