force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_DeclinedReason__c.field-meta.xml
<CustomField>
    <fullName>PP_DeclinedReason__c</fullName>
    <description>SFP-11649 - Application Abandoned Reason</description>
    <inlineHelpText>Application Abandoned Reason</inlineHelpText>
    <label>Declined Reason​</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>