force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>PP_EmailAddress__c</fullName>
    <description>SFP-11649 - Email address provided during registration process.</description>
    <inlineHelpText>Email address provided during registration process.</inlineHelpText>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>