force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_FirstName__c.field-meta.xml
<CustomField>
    <fullName>PP_FirstName__c</fullName>
    <description>SFP-11649 - First name provided during registration process.</description>
    <inlineHelpText>First name provided during registration process.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>