force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_Industry__c.field-meta.xml
<CustomField>
    <fullName>PP_Industry__c</fullName>
    <description>SFP-11649 -Industry that the partner operates in.</description>
    <inlineHelpText>Industry that the partner operates in.</inlineHelpText>
    <label>Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industries</valueSetName>
    </valueSet>
</CustomField>