force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_LastName__c.field-meta.xml
<CustomField>
    <fullName>PP_LastName__c</fullName>
    <description>SFP-11649- Last name provided during registration process.</description>
    <inlineHelpText>Last name provided during registration process.</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>