force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_LinkedInProfile__c.field-meta.xml
<CustomField>
    <fullName>PP_LinkedInProfile__c</fullName>
    <description>SFP-11649 - LinkedIn profile URL for the partner.</description>
    <inlineHelpText>LinkedIn profile URL for the partner.</inlineHelpText>
    <label>LinkedIn Profile</label>
    <type>Url</type>
</CustomField>