force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_OperatingCountry__c.field-meta.xml
<CustomField>
    <fullName>PP_OperatingCountry__c</fullName>
    <description>SFP-11649 - Countries that the partner operates in.</description>
    <inlineHelpText>Countries that the partner operates in.</inlineHelpText>
    <label>Operating Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>