force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_PartnerID__c.field-meta.xml
<CustomField>
    <fullName>PP_PartnerID__c</fullName>
    <description>SFP-11649 : Auto Generated Unique Partner Application ID.</description>
    <displayFormat>PID-{0000}</displayFormat>
    <inlineHelpText>Auto Generated Unique Partner Application ID.</inlineHelpText>
    <label>Partner ID</label>
    <type>AutoNumber</type>
</CustomField>