force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_PartnershipGoal__c.field-meta.xml
<CustomField>
    <fullName>PP_PartnershipGoal__c</fullName>
    <description>SFP-11649 - Indicates how the see the partnership working with SBG.</description>
    <inlineHelpText>Indicates how the see the partnership working with SBG.</inlineHelpText>
    <label>Partnership Goal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distribute Standard Bank Solutions to our clients, through my channel or platform (i.e. digital or physical)</fullName>
            </value>
            <value>
                <fullName>Distribute Our Solutions to Standard Bank clients through their channel or platform (i.e. digital or physical)</fullName>
            </value>
            <value>
                <fullName>Co-create new solution with Standard Bank</fullName>
            </value>
            <value>
                <fullName>Sell a product or provide a service directly to Standard Bank (i.e. IT hardware, professional services)</fullName>
            </value>
            <value>
                <fullName>Other (Please specify)</fullName>
            </value>
            <value>
                <fullName>Co-create a new product or solution with SBG</fullName>
                <isActive>false</isActive>
                <label>Co-create a new product or solution with SBG</label>
            </value>
            <value>
                <fullName>Distribute SBG products and solutions on my platform</fullName>
                <isActive>false</isActive>
                <label>Distribute SBG products and solutions on my platform</label>
            </value>
            <value>
                <fullName>SBG To distribute my products and solutions</fullName>
                <isActive>false</isActive>
                <label>SBG To distribute my products and solutions</label>
            </value>
            <value>
                <fullName>Sell a product or solution directly to SBG</fullName>
                <isActive>false</isActive>
                <label>Sell a product or solution directly to SBG</label>
            </value>
            <value>
                <fullName>Sell a product or solution to SBG&apos;s client through SBG</fullName>
                <isActive>false</isActive>
                <label>Sell a product or solution to SBG&apos;s client through SBG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>