force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_PartnershipGoalOther__c.field-meta.xml
<CustomField>
    <fullName>PP_PartnershipGoalOther__c</fullName>
    <description>SFP-11649 - Partnership Goal Other.</description>
    <label>Partnership Goal Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>