force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PP_PrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFP-11649 - The contact that represents the partners main contact person at the time of registration. This contact is also enabled as community user.</description>
    <inlineHelpText>The contact that represents the partners main contact person at the time of registration. This contact is also enabled as community user.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Applications</relationshipLabel>
    <relationshipName>PartnerApplications</relationshipName>
    <type>Lookup</type>
</CustomField>