force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>PP_RegistrationNumber__c</fullName>
    <description>SFP-11649 - Company registration number provided during registration.</description>
    <inlineHelpText>Company registration number provided during registration.</inlineHelpText>
    <label>Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>