force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_SolutionDetails__c.field-meta.xml
<CustomField>
    <fullName>PP_SolutionDetails__c</fullName>
    <description>SFP-11649 - An overview of the solution that the partner wants to engage with or proposing.</description>
    <inlineHelpText>An overview of the solution that the partner wants to engage on or is proposing.</inlineHelpText>
    <label>Solution Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>