force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_TermsConditionsAccepted__c.field-meta.xml
<CustomField>
    <fullName>PP_TermsConditionsAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFP-11649 - Indicates that the partner accepted T&amp;C&apos;s at registration.</description>
    <inlineHelpText>Indicates that the partner accepted T&amp;C&apos;s at registration.</inlineHelpText>
    <label>Terms &amp; Conditions Accepted</label>
    <type>Checkbox</type>
</CustomField>