force-app/main/default/objects/PP_PartnerApplication__c/fields/PP_Website__c.field-meta.xml
<CustomField>
    <fullName>PP_Website__c</fullName>
    <description>SFP-11649 - Website URL provided during registration.</description>
    <inlineHelpText>Website URL provided during registration.</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>