force-app/main/default/objects/PP_PartnerApplication__c/validationRules/Must_fill_Partnership_Goal_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_fill_Partnership_Goal_Other</fullName>
    <active>true</active>
    <description>If the Partnership Goal field value Other is selected, the Partnership Goal Other field must be required.</description>
    <errorConditionFormula>IF(INCLUDES(PP_PartnershipGoal__c, &apos;Other (Please specify)&apos;) &amp;&amp; ISBLANK( PP_PartnershipGoalOther__c ) , true, false)</errorConditionFormula>
    <errorDisplayField>PP_PartnershipGoalOther__c</errorDisplayField>
    <errorMessage>Please Enter Partnership Goal Other</errorMessage>
</ValidationRule>