force-app/main/default/objects/PP_PartnerApplication__c/validationRules/Please_Provide_Declined_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Please_Provide_Declined_Reason</fullName>
    <active>true</active>
    <description>When the status Abandoned Make Abandoned Reason Field Required.</description>
    <errorConditionFormula>AND(ISPICKVAL( PP_ApplicationStatus__c ,&quot;Declined&quot;),  PP_DeclinedReason__c = &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>PP_DeclinedReason__c</errorDisplayField>
    <errorMessage>Please Provide Declined Reason.</errorMessage>
</ValidationRule>