force-app/main/default/objects/PP_PartnerApplication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PP_Account__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>PP_ApplicationStatus__c</columns>
    <columns>PP_Industry__c</columns>
    <columns>PP_PrimaryContact__c</columns>
    <columns>PP_RegistrationNumber__c</columns>
    <columns>PP_Capabilities__c</columns>
    <columns>PP_TermsConditionsAccepted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PP_Website__c</columns>
    <columns>PP_PartnershipGoal__c</columns>
    <columns>PP_OperatingCountry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>